Archive2/a2/7768d6578afc32/output
main.cpp: In function 'int main()':
main.cpp:61:6: error: conflicting declaration 'auto it'
 auto it = vectBool.begin();
      ^
main.cpp:36:23: note: previous declaration as 'std::vector<int>::iterator it'
 vector<int>::iterator it = begin(v);
                       ^
main.cpp:31:6: warning: unused variable 'k' [-Wunused-variable]
 auto k = 10; //k is int
      ^
main.cpp:54:6: warning: unused variable 'x' [-Wunused-variable]
 auto x = v.size();
      ^
main.cpp:55:10: warning: unused variable 'x2' [-Wunused-variable]
 unsigned x2 = v.size(); //win32 -> 32bit, win64: unsigned 32bint, size() 64bit.
          ^
main.cpp:58:6: warning: unused variable 'intVariable' [-Wunused-variable]
 auto intVariable = {1};
      ^
